appId: com.civeloo.gen
---
- launchApp
- tapOn: 'SIGN IN'
- tapOn: 'Sign in with Google'
- tapOn: 'Diego Ezequiel Guillén'
- tapOn: 'Continue'
- assertVisible: 'SIGN OUT'
